[package]
name = "casper-trie-diag"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "*"
casper-types = { path = "../casper-node/types", features = ["std"] }
casper-hashing = { path = "../casper-node/hashing" }
casper-execution-engine = { path = "../casper-node/execution_engine" }

serde_json = "1" 
serde = "1" 
tui= "0.16"

lmdb = "0.8.0"
structopt = "0.3.22"
