[package]
name = "casper-trie-diag"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "*"
casper-node = { path = "../retrieve-state-fanout/node" }
casper-types = { path = "../retrieve-state-fanout/types", features = ["std"] }
casper-hashing = { path = "../retrieve-state-fanout/hashing" }
casper-execution-engine = { path = "../retrieve-state-fanout/execution_engine" }
retrieve-state = { path = "../retrieve-state-fanout/utils/retrieve-state" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

serde_json = "1" 
serde = "1" 
tui= "0.16"

lmdb = "0.8.0"
structopt = "0.3.22"
