[package]
name = "casper-trie-diag"
version = "0.1.0"
edition = "2018"

[dependencies]

anyhow = "*"
casper-node = { path = "../casper-node/node" }
casper-types = { path = "../casper-node/types", features = ["std"] }
casper-hashing = { path = "../casper-node/hashing" }
casper-execution-engine = { path = "../casper-node/execution_engine" }
retrieve-state = { path = "../casper-node/utils/retrieve-state" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

serde_json = "1"
serde = "1"
tui= "0.16"

lmdb = "0.8.0"
structopt = "0.3.22"
